--- a/Task_03/index.html
+++ b/Task_03/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div id="table"></div>
+    <button id="button" type="button">Generate the Table</button>
+    
+    <script src="js/function.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
