task #05 - in progress

--- a/Task_05/index.html
+++ b/Task_05/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="content-frame" id="content-frame">
+        <div class="text-box">
+            <h1 class="heading">Welcome to Our Poll</h1>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Corporis, voluptatibus ipsam eius consequuntur aut temporibus optio 
+                veniam totam obcaecati, ratione nostrum odio repudiandae animi in quam 
+                nisi minus hic debitis numquam, repellat possimus rerum est repellendus 
+                velit! Et dolores necessitatibus voluptatibus aperiam nemo animi vero 
+                a alias cum tempore, maiores vel odio expedita voluptas nobis id placeat 
+                iure quaerat asperiores aliquam eum maxime reprehenderit adipisci odit! 
+                Nobis veritatis, eveniet quis quidem est nisi perferendis quae eos 
+                reprehenderit soluta fugiat beatae suscipit molestiae repellat saepe natus 
+                rerum! Illo ducimus harum praesentium blanditiis vero. Nulla suscipit 
+                neque eveniet asperiores accusantium veritatis tempore.
+            </p>
+            <button id="button" class="button" type="button">START POLL</button>
+        </div>
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
