--- a/Task_05/index.html
+++ b/Task_05/index.html
@@ -4,29 +4,69 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Task #05</title>
+    <title>Feedback Poll Application</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="content-frame" id="content-frame">
-        <div class="text-box">
-            <h1 class="heading">Welcome to Our Poll</h1>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Corporis, voluptatibus ipsam eius consequuntur aut temporibus optio 
-                veniam totam obcaecati, ratione nostrum odio repudiandae animi in quam 
-                nisi minus hic debitis numquam, repellat possimus rerum est repellendus 
-                velit! Et dolores necessitatibus voluptatibus aperiam nemo animi vero 
-                a alias cum tempore, maiores vel odio expedita voluptas nobis id placeat 
-                iure quaerat asperiores aliquam eum maxime reprehenderit adipisci odit! 
-                Nobis veritatis, eveniet quis quidem est nisi perferendis quae eos 
-                reprehenderit soluta fugiat beatae suscipit molestiae repellat saepe natus 
-                rerum! Illo ducimus harum praesentium blanditiis vero. Nulla suscipit 
-                neque eveniet asperiores accusantium veritatis tempore.
-            </p>
-            <button id="button" class="button" type="button">START POLL</button>
+    <section class="introduction">
+        <div class="content-frame">
+            <div class="heading-box">
+                <h1 class="heading">Leave Your Feedback</h1>
+            </div>
+            <div class="text-box">
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Autem ab explicabo dicta possimus eius quia rerum sequi ad placeat 
+                    adipisci qui perspiciatis sint quidem culpa et aspernatur laborum 
+                    reprehenderit, quaerat eaque nobis omnis voluptates obcaecati illum 
+                    optio! Voluptatem nihil vitae officiis eveniet nemo iusto, alias 
+                    necessitatibus sapiente rem similique ipsum assumenda asperiores 
+                    voluptates ducimus fuga at? Voluptates ex labore culpa eius debitis 
+                    odit. Odit, facere dolores esse architecto aspernatur accusantium 
+                    magnam? Qui numquam iusto, ratione eos dolorem asperiores quasi. 
+                    Amet labore corrupti velit quis architecto, explicabo fugiat minima 
+                    ullam aut. Atque iste dolore voluptas sed consectetur, adipisci 
+                    excepturi possimus aliquam.
+                </p>
+            </div>
         </div>
-    </div>
-
+    </section>
+    <section class="poll">
+        <div class="content-frame">
+            <div class="poll-items">
+                <div class="poll__item">
+                    <div class="poll__button-box">
+                        <button class="button" id="button01"></button>
+                    </div>
+                    <div class="poll__counter-box" id="poll__counter-box01"></div>
+                </div>
+                <div class="poll__item">
+                    <div class="poll__button-box">
+                        <button class="button" id="button02"></button>
+                    </div>
+                    <div class="poll__counter-box" id="poll__counter-box02"></div>
+                </div>
+                <div class="poll__item">
+                    <div class="poll__button-box">
+                        <button class="button" id="button03"></button>
+                    </div>
+                    <div class="poll__counter-box" id="poll__counter-box03"></div>
+                </div>
+                <div class="poll__item">
+                    <div class="poll__button-box">
+                        <button class="button" id="button04"></button>
+                    </div>
+                    <div class="poll__counter-box" id="poll__counter-box04"></div>
+                </div>
+                <div class="poll__item">
+                    <div class="poll__button-box">
+                        <button class="button" id="button05"></button>
+                    </div>
+                    <div class="poll__counter-box" id="poll__counter-box05"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="js/functions.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
